@@ -26,10 +26,10 @@
 		</SPAN>
 
 		<!-- C++ style comment -->
-		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 
 		<!-- BeanShell comment -->
-		<EOL_SPAN TYPE="COMMENT1">#!</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT3">#!</EOL_SPAN>
 
 		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
 			<BEGIN>"</BEGIN>
