@@ -28,12 +28,12 @@
 		</SPAN>
 
 		<!-- DocComments may have XML in them -->
-		<EOL_SPAN TYPE="COMMENT2" DELEGATE="DOC_COMMENT">///</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT3" DELEGATE="DOC_COMMENT">///</EOL_SPAN>
 
-		<EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+		<EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 
 		<!-- verbatim strings -->
-		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="FALSE">
+		<SPAN TYPE="LITERAL3" NO_LINE_BREAK="FALSE" NO_ESCAPE="TRUE">
 			<BEGIN>@"</BEGIN>
 			<END>"</END>
 		</SPAN>
@@ -170,7 +170,7 @@
 		</KEYWORDS>
 	</RULES>
 
-	<RULES SET="DOC_COMMENT" DEFAULT="COMMENT2" IGNORE_CASE="TRUE">
+	<RULES SET="DOC_COMMENT" DEFAULT="COMMENT3" IGNORE_CASE="TRUE">
 		<!-- XML comments -->
 		<SPAN TYPE="COMMENT1">
 			<BEGIN>&lt;--</BEGIN>
