@@ -18,11 +18,11 @@
 
     <RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
         <!-- Compiler directives. -->
-        <SPAN TYPE="COMMENT2">
+        <SPAN TYPE="COMMENT3">
             <BEGIN>{$</BEGIN>
             <END>}</END>
         </SPAN>
-        <SPAN TYPE="COMMENT2">
+        <SPAN TYPE="COMMENT3">
             <BEGIN>(*$</BEGIN>
             <END>*)</END>
         </SPAN>
@@ -38,7 +38,7 @@
             <END>*)</END>
         </SPAN>
 
-        <EOL_SPAN TYPE="COMMENT1">//</EOL_SPAN>
+        <EOL_SPAN TYPE="COMMENT2">//</EOL_SPAN>
 
         <SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
             <BEGIN>'</BEGIN>
